# boerenbridge_cpp

./: README.md
Boerenbridge_cpp/: CMakeLists.txt  Card.cpp  card.h  computerplayer.cpp  computerplayer.h  game.cpp  game.h  humanplayer.cpp  humanplayer.h  main.cpp  player.cpp  player.h
build-Boerenbridge_cpp-Desktop_x86_windows_msvc2022_pe_32bit-Debug/: .ninja_deps  .ninja_log  Boerenbridge_cpp.ilk  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Boerenbridge_cpp-Desktop_x86_windows_msvc2022_pe_32bit-Debug/.cmake/api/v1/reply/: cache-v2-7ddd2945fc265f3a7188.json  cmakeFiles-v1-61f1ee2f9cb2fe9e3970.json  codemodel-v2-b155228fcc714b65b74b.json  directory-.-Debug-71312f6948cc8cfa16dd.json  index-2024-02-15T09-54-52-0334.json  target-Boerenbridge_cpp-Debug-e6400c5ee6f6745101ca.json
build-Boerenbridge_cpp-Desktop_x86_windows_msvc2022_pe_32bit-Debug/.qtc_clangd/: compile_commands.json
build-Boerenbridge_cpp-Desktop_x86_windows_msvc2022_pe_32bit-Debug/.qtc_clangd/.cache/clangd/index/: Card.cpp.18DC2E074DFA161E.idx  algorithm.B8912EAC235277D2.idx  atomic.176718F11964AAE6.idx  card.h.8B26F675BA4E3A70.idx  computerplayer.cpp.8CABC776E3A328C9.idx  computerplayer.h.66131B6BF7EAC694.idx  corecrt.h.650763E20117E559.idx  corecrt_memcpy_s.h.075A7BCF9D0AC67A.idx  corecrt_memory.h.8A41AEF31BAA1C07.idx  corecrt_wstdio.h.CC2BCD844E5A11A9.idx  corecrt_wstring.h.12C04CCAE4409B44.idx  crtdefs.h.49D244F4E5827617.idx  cstring.B37A83ED8384A078.idx  cwchar.EF4E32DD207E20A6.idx  exception.71BD3F996CCBF444.idx  game.cpp.6BC57848AB29189B.idx  (+31 more)
